@@ -1,3 +1,5 @@
+- use /dev/cdrom in fstab, and write corresponding udev rule
+  (the rules were generated at boot time but here we ensure consistent naming)
 - 2008 logo
 - bootloader:
   o if there is a /boot, check /boot instead of "/" to allow grub or not
